--- a/wip.css
+++ b/wip.css
@@ -44,6 +44,10 @@ header{
     background-color: lightcyan;
 }
 
+.barreMenu{
+    background-color: lightskyblue
+}
+
 .conteneur{
 	max-width: 880px;
 	margin: 0 auto;
