WIP, ErrorListComponent, commentaires...

--- a/app/wip.css
+++ b/app/wip.css
@@ -1,9 +1,7 @@
 /*
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
+CSS Work in progress...
 */
-/* 
+/*
     Created on : 20 mai 2016, 11:31:06
     Author     : xnef424
 */
@@ -15,7 +13,7 @@ header{
 
 #bandeau-superieur{
     background-color: lightcoral;
-    min-height: 35px; 
+    min-height: 35px;
 }
 
 
