--- a/wip.css
+++ b/wip.css
@@ -3,7 +3,7 @@ To change this license header, choose License Headers in Project Properties.
 To change this template file, choose Tools | Templates
 and open the template in the editor.
 */
-/* 
+/*
     Created on : 20 mai 2016, 11:31:06
     Author     : xnef424
 */
@@ -15,7 +15,7 @@ header{
 
 #bandeau-superieur{
     background-color: lightcoral;
-    min-height: 35px; 
+    min-height: 35px;
 }
 
 
@@ -65,4 +65,9 @@ header{
 	height: 62px;
 	margin-top: 81px;
 
+}
+
+.selected {
+	background-color: blue;
+	box-shadow: 1px 1px 12px red;
 }
