Fixed errorList and errorDetail

--- a/app/wip.css
+++ b/app/wip.css
@@ -16,7 +16,7 @@ header{
 }
 
 #bandeau-superieur{
-    background-color: lightcoral;
+    background-color: lightgreen;
     min-height: 35px;
 }
 
